# pypanther-starter-kit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml  rule_manager.py
.cursor/rules/: rule-gen.mdc
.github/workflows/: lint.yml  test.yml  upload.yml
content/helpers/: cloud.py
content/overrides/: aws_cloudtrail.py  aws_guardduty.py
content/rules/: aws_alb_high_400s.py  aws_cloudtrail_root_login.py  aws_cloudtrail_stopped.py  aws_guard_duty_high_sev.py  cloudtrail_stopped.py  example_mocks.py  example_rule.py  inheritance_rules.py  panther_modifications_outside_cicd.py  test_rule.py  typed_rule.py  validate_rule.py
content/schemas/: schema1.yml  schema1_tests.yml
examples/filtering_panther_rules/: main.py
examples/minimalist/: main.py
examples/multi_rule_files/: main.py
examples/overriding_provided_rules/: main.py
examples/rule_filters/: main.py
examples/side_by_side_converted_v1_rule/: main.py
filters/: filters.py
helpers/: cloud.py  custom_log_types.py  rule_overrides.py
overrides/: aws_cloudtrail.py  aws_guardduty.py  test_aws_cloudtrail.py  test_aws_guardduty.py
rules/: custom_log_type.py  my_first_custom_rule.py
rules/aws_alb/: alb_high_400s.py
rules/aws_alb_rules/: alb_high_400s.py
rules/aws_cloudtrail_rules/: config.py  main.py  my_first_custom_rule.py  my_first_tuned_rule.py
rules/aws_guardduty_rules/: config.py
rules/aws_rules/: alb_high_400s.py  my_cloudtrail_rule.py  sample_logs.py
rules/custom_log_type/: ids_rules.py
rules/custom_logs/: ids_rules.py  (+2 more)
tests/: test_rules.py
(+24 files in other folders)
