[tool.poetry]
name = "pypanther-starter-kit"
version = "0.1.0"
description = ""
authors = ["Panther Labs <pypi@runpanther.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
pypanther = "^0.1.1a40"
panther-core = "^0.11.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
