[project]
name = "pypanther-starter-kit"

[tool.poetry]
version = "0.1.0"
description = ""
authors = ["Panther Labs <pypi@runpanther.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
pypanther = "0.1.1a54"
panther-core = ">= 0.11.2, < 1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0, < 1.11"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
